--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="imgae/x-icon" href="/favicon-16.ico?v=0" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=0">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-16.png?v=0">
+  <link rel="icon" type="imgae/x-icon" sizes="32x32" href="/favicon-16.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+
   <link rel="stylesheet" href="src/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Find Anime Characters By MBTI</title>
