--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,10 +18,14 @@
 
   <footer>
     <span>
-      If you don't know your MBTI, you can take a quick test here to get your MBTI.
+      If you don't know your MBTI, you can take a quick test here to get your MBTI. It may take 5 to 10 minutes.
     </span>
     <a href="https://www.16personalities.com/free-personality-test" target="_blank" rel="noopener">
-      Link to MBTI Test
+      Link to official MBTI Test
+    </a><br>
+    Or you can do a 1-minute self test use this link
+    <a href="/explanation.html" target="_blank" rel="noopener">
+      1-minute MBTI self-test
     </a>
   </footer>
 </body>
